--- a/alice.ipynb
+++ b/alice.ipynb
@@ -77,9 +77,7 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from scipy.sparse import csr_matrix, hstack\n",
-    "from sklearn.feature_selection import chi2, SelectKBest\n",
-    "from sklearn.feature_selection import RFE"
+    "from scipy.sparse import csr_matrix, hstack\n"
    ]
   },
   {
